--- a/newmain.css
+++ b/newmain.css
@@ -1,11 +1,14 @@
+html{
+    font-family: "Consolas", "Courier New", monospace;
+}
+
 body {
     background-color: #161616;
     color: whitesmoke;
 }
-/*esse [e o "HACK DATA"*/
+/*esse e o "WebDump"*/
 body h1 {
     color: whitesmoke;
-    font-family:consolas;
     margin: 10px;
 }
 
@@ -14,7 +17,6 @@ body h1:hover {
 }
 /*auto explicativo*/
 .content {
-    font-family: consolas;
     text-align: center;
     max-width: 1170px;
     margin: auto;
