--- a/newmain.css
+++ b/newmain.css
@@ -1,5 +1,5 @@
 html{
-    font-family: 'Rubik', sans-serif;
+    font-family: consolas, sans-serif;
 }
 
 body {
@@ -60,6 +60,7 @@ body h1:hover {
     border: 1px solid #363636;
     outline: none;
     transition: 0.1s;
+    font: 20px consolas, sans-serif;
 }
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active {
