--- a/newmain.css
+++ b/newmain.css
@@ -1,14 +1,16 @@
 html{
-    font-family: consolas, sans-serif;
+    font-family: "Consolas", "Courier New", monospace;
 }
 
 body {
     background-color: #161616;
     color: whitesmoke;
 }
+/*esse [e o "HACK DATA"*/
 /*esse e o "WebDump"*/
 body h1 {
     color: whitesmoke;
+    font-family:consolas;
     margin: 10px;
 }
 
@@ -17,12 +19,12 @@ body h1:hover {
 }
 /*auto explicativo*/
 .content {
+    font-family: consolas;
     text-align: center;
     max-width: 1170px;
     margin: auto;
     background-color:#191919;
   }
-
 .links {
     text-decoration: none;
     color: whitesmoke;
@@ -36,7 +38,6 @@ body h1:hover {
 .semicon {
     padding: 2%;
 }
-
 .semicon a {
     border-radius: 5px;
     display: inline-block;
@@ -60,7 +61,7 @@ body h1:hover {
     border: 1px solid #363636;
     outline: none;
     transition: 0.1s;
-    font: 20px consolas, sans-serif;
+    font: 20px Lato, consolas, sans-serif;
 }
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active {
@@ -71,9 +72,7 @@ body h1:hover {
 .accordion:hover {
     background-color:#262626;
     //#262626
-
 } */
-
 /* Style the accordion panel. Note: hidden by default */
 .panel {
     padding: 0 18px;
@@ -81,7 +80,6 @@ body h1:hover {
     display: none;
     
     
-
 }
 .panel a{
     display: list-item;
@@ -91,8 +89,6 @@ body h1:hover {
     font-size: x-large;
     font: bold;
     text-align: left;
-
-
 }
 .panel p{
     color: #81bd80;
@@ -112,5 +108,3 @@ header {
     background-color: #262626;
     
 }
-
-
